# garlix

./: Makefile.in  README.md  configure  configure.ac
include/: Makefile.am  stddef.h  stdio.h  string.h  system.h  vga.h
src/: Makefile.am  Makefile.in  boot.S  link.ld  main.c
