
# This is the autoconf configuration file for the garlix kernel


AC_INIT(garlix,0.0.2,jota.191@gmail.com)


# options for running automake
# foreign flag tells that this is not a gnu package
AM_INIT_AUTOMAKE([-Wall -Werror foreign])


#languages used
AC_PROG_CC
AM_PROG_AS

# lists of files that configure script should generate
AC_OUTPUT([
Makefile
include/Makefile
src/Makefile
])
